<resources>
    <string name="app_name">OchangFactory</string>

    <string name="samsung_name">삼성SDI</string>
    <string name="samsung_address">청주시 청원구 오창읍 과학산업4로 146</string>

    <string name="samnav1_1">대상물 기본현황</string>
    <string name="samnav1_2">동별현황</string>
    <string name="samnav1_3">배치도</string>
    <string name="samnav1_4">관계자 현황</string>

    <string name="samnav2_1">동별 소방시설현황</string>

    <string name="samnav3_1">위험물 현황</string>
    <string name="samnav3_2">위험물 배치도</string>
    <string name="samnav3_3">동별 사용현황</string>

    <string name="samnav4_1">유해화학물질 현황</string>
    <string name="samnav4_2">유해화학물질 배치도</string>
    <string name="samnav4_3">동별 사용현황</string>

    <string name="samnav5_1">차량 부서 위치</string>
    <string name="samnav5_2">위험물 진압대책</string>
    <string name="samnav5_3">유해화학물질 진압대책</string>

    <string name="gc_name">녹십자</string>
    <string name="gc_address">청주시 청원구 오창읍 과학산업2로 586</string>

    <string name="gcnav1_1">대상물 기본현황</string>
    <string name="gcnav1_2">동별현황</string>
    <string name="gcnav1_3">배치도</string>

    <string name="gcnav2_1">동별 소방시설현황</string>

    <string name="gcnav3_1">위험물 현황</string>
    <string name="gcnav3_2">위험물 배치도</string>
    <string name="gcnav3_3">동별 사용현황</string>

    <string name="gcnav4_1">유해화학물질 현황</string>
    <string name="gcnav4_2">유해화학물질 배치도</string>
    <string name="gcnav4_3">동별 사용현황</string>

    <string name="gcnav5_1">차량 부서 위치</string>
    <string name="gcnav5_2">위험물 진압대책</string>
    <string name="gcnav5_3">유해화학물질 진압대책</string>

    <string-array name="samsung_building_situation">
        <item>제조</item>
        <item>제조</item>
        <item>제조</item>
        <item>창고</item>
        <item>창고</item>
        <item>창고</item>
        <item>창고</item>
        <item>창고</item>
        <item>저장소</item>
        <item>U/T시설</item>
        <item>U/T시설</item>
        <item>U/T시설</item>
        <item>U/T시설</item>
        <item>U/T시설</item>
        <item>U/T시설</item>
        <item>U/T시설</item>
        <item>일반취급소</item>
        <item>출입관리</item>
    </string-array>
    
    <string-array name="samsung_description_1_3">
        <item>편광필름</item>
        <item>편광필름</item>
        <item>SOH</item>
        <item>원자재</item>
        <item>완제품</item>
        <item>위험물</item>
        <item>위험물</item>
        <item>폐기물</item>
        <item> 위험물</item>
        <item>변전실</item>
        <item>폐수처리</item>
        <item>냉동기 등</item>
        <item>보일러 등</item>
        <item>R/O 등</item>
        <item>냉동기 등</item>
        <item>필터 등</item>
        <item>위험물</item>
        <item>보안실</item>
    </string-array>

    <string-array name="gcc_building_situation">
        <item>경비실</item>
        <item>사무동</item>
        <item>동물실험동</item>
        <item>물류동</item>
        <item>통로</item>
        <item>충전&#38;포장동</item>
        <item>공장동</item>
        <item>유틸리티동</item>
        <item>폐기물장</item>
        <item>폐수처리</item>
        <item>공장동</item>
        <item>창고동</item>
        <item>운동시설</item>
        <item>공장동</item>
        <item>실험동</item>
        <item>경비실</item>
        <item>공장동</item>
        <item>저장&#38;충전&#38;포장동</item>
        <item>위험물저장소</item>
    </string-array>

    <string-array name="gcc_description_1_3">
        <item>보안실</item>
        <item>사무</item>
        <item>실험</item>
        <item>완제품</item>
        <item></item>
        <item>완제품</item>
        <item>제조</item>
        <item></item>
        <item>폐기물</item>
        <item>폐기물</item>
        <item>제조</item>
        <item>원자재</item>
        <item></item>
        <item>제조</item>
        <item>실험</item>
        <item>보안실</item>
        <item>제조</item>
        <item>완제품</item>
        <item>위험물</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="sort_ascending">Sort Ascending</string>
    <string name="sort_descending">Sort Descending</string>
    <string name="hiding_row_sample">Hiding 3. Row Sample</string>
    <string name="showing_row_sample">Showing 3. Row Sample</string>
    <string name="scroll_to_column_position">Scroll to 15. column position</string>
    <string name="scroll_to_row_position">Scroll to 5. row position</string>
    <string name="show_hide_the_column">Showing / Hiding 1. column</string>
    <string name="table_pagination_details">Page %s, showing items %s - %s.</string>

    <string-array name="moods">
        <item />
        <item>Happy</item>
        <item>Sad</item>
    </string-array>

    <string-array name="gender">
        <item />
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="items_per_page">
        <item>10</item>
        <item>20</item>
        <item>25</item>
        <item>50</item>
        <item>All</item>
    </string-array>
</resources>