<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="대상물 현황">
        <menu>

            <group android:checkableBehavior="single">
        <item
            android:id="@+id/samnav1_1"
            android:title="@string/samnav1_1"
            />
        <item
            android:id="@+id/samnav1_2"
            android:title="@string/samnav1_2"
            />
        <item
            android:id="@+id/samnav1_3"
            android:title="@string/samnav1_3"
            />
            </group>

        </menu>
    </item>

    <item android:title="소방시설 현황">
        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/samnav2_1"
                    android:title="@string/samnav2_1"
                    />

            </group>

        </menu>
    </item>

    <item android:title="위험물 현황">
        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/samnav3_1"
                    android:title="@string/samnav3_1"
                    />
                <item
                    android:id="@+id/samnav3_2"
                    android:title="@string/samnav3_2"
                    />
                <item
                    android:id="@+id/samnav3_3"
                    android:title="@string/samnav3_3"
                    />

            </group>

        </menu>
    </item>

    <item android:title="유해화학물질 현황">
        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/samnav4_1"
                    android:title="@string/samnav4_1"
                    />
                <item
                    android:id="@+id/samnav4_2"
                    android:title="@string/samnav4_2"
                    />
                <item
                    android:id="@+id/samnav4_3"
                    android:title="@string/samnav4_3"
                    />

            </group>

        </menu>
    </item>

    <item android:title="화재진압대책">
        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/samnav5_1"
                    android:title="@string/samnav5_1"
                    />
                <item
                    android:id="@+id/samnav5_2"
                    android:title="@string/samnav5_2"
                    />
                <item
                    android:id="@+id/samnav5_3"
                    android:title="@string/samnav5_3"
                    />

            </group>

        </menu>
    </item>


</menu>